--- a/IdentityByExamples/Views/Account/Login.cshtml
+++ b/IdentityByExamples/Views/Account/Login.cshtml
@@ -22,6 +22,9 @@
                 </label>
             </div>
             <div class="form-group">
+                <a asp-action="ForgotPassword">Forgot Password</a>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Log In" class="btn btn-primary" />
             </div>
         </form>
